WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70197
REGRESSION (
r96620
): Float-avoiding block positioned incorrectly in right-to-left block
https://bugs.webkit.org/show_bug.cgi?id=70197
Summary
REGRESSION (r96620): Float-avoiding block positioned incorrectly in right-to-...
mitz
Reported
2011-10-15 22:51:02 PDT
REGRESSION (
r96620
): Float-avoiding block positioned incorrectly in right-to-left block
Attachments
Use startOffsetForContent() instead of logicalLeftOffsetForContent() in computeStartPositionDeltaForChildAvoidingFloats()
(19.08 KB, patch)
2011-10-15 22:53 PDT
,
mitz
ddkilzer
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-10-15 22:53:02 PDT
Created
attachment 111175
[details]
Use startOffsetForContent() instead of logicalLeftOffsetForContent() in computeStartPositionDeltaForChildAvoidingFloats()
David Kilzer (:ddkilzer)
Comment 2
2011-10-16 08:50:09 PDT
Comment on
attachment 111175
[details]
Use startOffsetForContent() instead of logicalLeftOffsetForContent() in computeStartPositionDeltaForChildAvoidingFloats() r=me
mitz
Comment 3
2011-10-16 08:55:07 PDT
Fixed in <
http://trac.webkit.org/r97575
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug