REGRESSION (r96620): Float-avoiding block positioned incorrectly in right-to-left block https://bugs.webkit.org/show_bug.cgi?id=70197

Reviewed by Dave Kilzer.

Source/WebCore:

Test: fast/block/float/avoidance-rtl.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::computeStartPositionDeltaForChildAvoidingFloats): Changed
logicalLeftOffsetForContent() to startOffsetForContent() to get the right value in the
right-to-left case.

LayoutTests:

* fast/block/float/avoidance-rtl-expected.png: Added.
* fast/block/float/avoidance-rtl-expected.txt: Added.
* fast/block/float/avoidance-rtl.html: Added.



Canonical link: https://commits.webkit.org/86303@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97575 268f45cc-cd09-0410-ab3c-d52691b4dbfc